Fixed extra space at the end of <code> blocks

--- a/src/css/code.css
+++ b/src/css/code.css
@@ -33,6 +33,7 @@ pre {
   border: 2px solid #E1E1E1;
   border-radius: 5px;
   overflow-x: auto;
+  white-space: normal;
 }
 
 /* Filled mode for blocks of code */
